# ChangeLog for net-analyzer/ngrep
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/ngrep/ChangeLog,v 1.42 2007/12/23 12:33:17 cedk Exp $

*ngrep-1.45-r1 (23 Dec 2007)

  23 Dec 2007; Cédric Krier <cedk@gentoo.org> +ngrep-1.45-r1.ebuild:
  Add user ngrep for bug #199270

  09 Jul 2007; Raúl Porcel <armin76@gentoo.org> ngrep-1.45.ebuild:
  alpha stable

  13 May 2007; Steve Dibb <beandog@gentoo.org> ngrep-1.45.ebuild:
  amd64 stable

  24 Apr 2007; Jeroen Roovers <jer@gentoo.org> ngrep-1.45.ebuild:
  Stable for HPPA too.

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> ngrep-1.45.ebuild:
  ia64 stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> ngrep-1.45.ebuild:
  Stable on ppc64

  07 Apr 2007; Javier Villavicencio <the_paya@gentoo.org> ngrep-1.45.ebuild:
  Add ~x86-fbsd keyword.

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org> ngrep-1.45.ebuild:
  Stable on ppc.

  22 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> ngrep-1.45.ebuild:
  Stable on sparc

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> ngrep-1.45.ebuild:
  x86 stable

  20 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*ngrep-1.45 (23 Dec 2006)

  23 Dec 2006; Cedric Krier <cedk@gentoo.org> +files/ngrep-1.45.patch,
  +ngrep-1.45.ebuild:
  Version bump for bug #158845

  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> ngrep-1.42.ebuild,
  ngrep-1.43.ebuild, ngrep-1.44.ebuild:
  Removing virtual/libpcap wrt bug #117898

*ngrep-1.44 (05 Jul 2005)

  05 Jul 2005; Daniel Black <dragonheart@gentoo.org> +ngrep-1.44.ebuild:
  version bump

*ngrep-1.43 (26 Feb 2005)

  26 Feb 2005; Daniel Black <dragonheart@gentoo.org> metadata.xml,
  -files/ngrep-1.41-fix-HAVE_DUMB_UDPHDR-test.patch,
  -files/ngrep-1.41-libpcap-include.patch, -ngrep-1.40.ebuild,
  -ngrep-1.41.ebuild, +ngrep-1.43.ebuild: